<resources>
    <string name="app_name">糗事百科</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_suggest">专享</string>
    <string name="nav_video">视频</string>
    <string name="nav_image">图片</string>
    <string name="nav_text">文字</string>
    <string name="nav_day">精华</string>
    <string name="nav_system">系统</string>
    <string name="nav_awkward">段子</string>
    <string name="nav_setting">设置</string>

    <string name="action_settings">设置</string>
    <string name="developer">shaozengy@gmail.com</string>

    <string name="anonymous">匿名用户</string>
    <string name="content_data">顶 %1$S . 踩 %2$s . 评论 %3$s . 分享 %4$s</string>
    <string name="awkward_data">浏览 %1$S . 收藏 %2$s . 评论 %3$s . 分享 %4$s . 顶 %5$s . 踩 %6$s</string>
    <string name="type_flush">新鲜</string>
    <string name="type_hot">热门</string>
    <string name="title_activity_awkward">内涵段子</string>
    <string name="section_format">Hello World from section: %1$s</string>

</resources>
